# basiscs-paraller-programming

opencl/: CMakeLists.txt
opencl/mat-mul/: main.c  mul.cl
opencl/vadd/: main.c
